# Fastpath

./: .doxygen.conf  .gitignore  .travis.yml  CMakeLists.txt  README.md  circle.yml  doxyfile.in  temp.tar  travis.sh
fastpath/: ByteStorage.h  CMakeLists.txt  Exception.h  MessageBuffer.h  MutableByteStorage.h  SharedMemoryBuffer.h  config.h.in  fastpath.h  status.h  types.h
fastpath/event/: ActionNotifier.cpp  ActionNotifier.h  BlockingQueue.h  BusySpinQueue.h  CMakeLists.txt  DataEvent.cpp  DataEvent.h  Event.h  EventManager.cpp  EventManager.h  EventType.h  GlobalEventManager.cpp  GlobalEventManager.h  IOEvent.cpp  IOEvent.h  InlineEventManager.cpp  InlineEventManager.h  InlineQueue.h  MessageEvent.cpp  MessageEvent.h  MessageListener.cpp  MessageListener.h  PollManager.h  PollManager_select.h  Queue.cpp  Queue.h  Session.cpp  Session.h  SharedQueue.h  SignalEvent.cpp  SignalEvent.h  Subscriber.cpp  Subscriber.h  TimerEvent.cpp  TimerEvent.h  notifier.h
fastpath/messages/: BaseMessage.cpp  BaseMessage.h  CMakeLists.txt  DataField.h  DateTimeField.h  Field.h  FieldAllocator.h  FieldTraits.h  LargeDataField.h  Message.cpp  Message.h  MessageCodec.h  MessageField.cpp  MessageField.h  MutableMessage.cpp  MutableMessage.h  ScalarField.h  Serializable.h  SmallDataField.h  StorageTypes.h  subject.h  subscription.h
fastpath/router/: CMakeLists.txt  bootstrap.cpp  bootstrap.h  fprouter.cpp  message_wrapper.cpp  message_wrapper.h  peer_connection.cpp  peer_connection.h  server_transport.h  shm_peer_connection.cpp  shm_peer_connection.h  shm_server_transport.cpp  shm_server_transport.h  subject.h  subscription.h  tcp_peer_connection.cpp  tcp_peer_connection.h  tcp_server_transport.cpp  tcp_server_transport.h
fastpath/tools/: CMakeLists.txt  fplisten.cpp  fpsend.cpp  performance_sink.cpp  performance_source.cpp
fastpath/transport/: BackoffStrategy.h  CMakeLists.txt  SHMTransport.cpp  SHMTransport.h  Socket.cpp  Socket.h  TCPSocket.cpp  TCPSocket.h  TCPSocketClient.cpp  TCPSocketClient.h  TCPSocketServer.cpp  TCPSocketServer.h  TCPTransport.cpp  TCPTransport.h  Transport.h  TransportIOEvent.cpp  TransportIOEvent.h  URL.cpp  URL.h  UnixSocket.cpp  UnixSocket.h  UnixSocketClient.cpp  UnixSocketClient.h  UnixSocketServer.cpp  UnixSocketServer.h  realm_transport.cpp  realm_transport.h
fastpath/utils/: CMakeLists.txt  allocate_polymorphic.h  allocate_unique.h  blocking_ringbuffer.h  concurrentqueue.h  daemon_process.cpp  fast_linear_allocator.h  logger.h  optimize.h  ref_count_ptr.h  rwlock.h  semaphore_light.h  stringhash.h  temp_directory.h  tfmultiringbuffer.h  tfnulllock.h  tfpool.h  tfringbuffer.h  tfspinlock.h  tfthread_utils.h
playground/: .CMakeLists.txt.swp  AllocatorPlayground.cpp  CMakeLists.txt  KeyIndexTest.cpp  PerformanceTest.cpp  PoolTest.cpp  SharedMemoryReceiver.cpp  SharedMemorySender.cpp  SubjectTest.cpp  ipc_recv.cpp  ipc_send.cpp  performance.h  shm_allocator.h  tfpool_new.h
playground/IPC/: InterprocessNotifier.cpp  InterprocessNotifier.h  InterprocessNotifierClient.cpp  InterprocessNotifierClient.h  InterprocessNotifierServer.cpp  InterprocessNotifierServer.h  notifier.h
src/: ByteStorage.cpp  ByteStorage.h  CMakeLists.txt  DataField.h  Decoder.h  Element.cpp  Element.h  ElementTraits.h  Encoder.h  Exception.h  Field.cpp  Field.h  FieldTraits.h  Message.cpp  Message.h  MessageBuffer.cpp  MessageBuffer.h  MessageCodec.cpp  MessageCodec.h  MessageField.cpp  MessageField.h  MutableByteStorage.cpp  MutableByteStorage.h  ScalarField.h  Serializable.h  SharedMemoryBuffer.h  Types.h  concurrentqueue.h  config.h.in  console_colors.h  fastpath.h  logger.h  status.h  tfthread_utils.h  types.h
src/Messages/: Field.h  FieldTraits.h  Message.h
src/Utils/: tfspinlock.h
src/event/: ActionNotifier.cpp  ActionNotifier.h  BlockingQueue.h  BusySpinQueue.h  CMakeLists.txt  DataEvent.cpp  DataEvent.h  Event.cpp  Event.h  EventManager.cpp  EventManager.h  EventType.h  GlobalEventManager.cpp  GlobalEventManager.h  IOEvent.cpp  IOEvent.h  InlineEventManager.cpp  InlineEventManager.h  InlineQueue.h  MessageEvent.cpp  MessageEvent.h  MessageListener.cpp  MessageListener.h  PollManager.h  PollManager_epoll.h  PollManager_kqueue.h  PollManager_select.h  Queue.cpp  Queue.h  Session.h  SharedQueue.h  Subscriber.cpp  Subscriber.h  TimerEvent.cpp  TimerEvent.h
src/messages/: BaseMessage.cpp  BaseMessage.h  CMakeLists.txt  DataField.h  DateTimeField.h  Field.h  FieldPayload.h  FieldTraits.h  LargeDataField.h  Message.cpp  Message.h  MessageAddressing.cpp  MessageAddressing.h  MessageField.cpp  MessageField.h  ScalarField.h  Serializable.h  SmallDataField.h  StorageTypes.h
src/router/: CMakeLists.txt  bootstrap.cpp  bootstrap.h  fprouter.cpp  fprouter.h  peer_connection.cpp  peer_connection.h  stringhash.h  subject.h  subscription.cpp  subscription.h
src/tools/: CMakeLists.txt  fplisten.cpp  fpsend.cpp  performance_sink.cpp  performance_source.cpp
src/transport/: CMakeLists.txt  SHMTransport.cpp  SHMTransport.h  Socket.cpp  Socket.h  SocketClient.cpp  SocketClient.h  SocketServer.cpp  SocketServer.h  TCPSocket.cpp  TCPSocket.h  TCPSocketClient.cpp  TCPSocketClient.h  TCPSocketServer.cpp  TCPSocketServer.h  TCPTransport.cpp  TCPTransport.h  Transport.h  TransportIOEvent.cpp  TransportIOEvent.h  URL.cpp  URL.h  UnixSocket.cpp  UnixSocket.h  UnixSocketClient.cpp  UnixSocketClient.h  UnixSocketServer.cpp  UnixSocketServer.h  realm_transport.cpp  realm_transport.h
src/utils/: CMakeLists.txt  allocate_unique.h  blocking_ringbuffer.h  blockingconcurrentqueue.h  console_colors.h  daemon_process.cpp  daemon_process.h  fast_linear_allocator.h  logger.h  optimize.h  ref_count_ptr.h  rwlock.h  semaphore_light.h  short_alloc.h  tfmultiringbuffer.h  tfoptions.h  tfpool.h  (+4 more)
tests/: ByteStorageTests.cpp  CMakeLists.txt  ElementTests.cpp  EventTests.cpp  FieldTests.cpp  MessageBufferTests.cpp  MessageCodec.cpp  MessageTests.cpp  MutableByteStorageTests.cpp  QueueTests.cpp  SessionTests.cpp  SocketTests.cpp  SubscriptionTests.cpp  TCPTransportTests.cpp  URLTests.cpp  linear_allocator_tests.cpp
(+41 files in other folders)
